--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(L31P2_Graphs)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(L31P2_Graphs main.cpp IGraph.cpp IGraph.h)
+add_executable(L31P2_Graphs main.cpp IGraph.cpp IGraph.h Service.cpp Service.h)
